package com.coderme.design.factory.network;

/**
 * @author qiudm
 * @date 2018/9/25 16:15
 * @desc
 */
public interface Sender {
    /**
     * 定义发送
     */
    void send();

}
