package com.coderme.design.factory.network.abstracts;


import com.coderme.design.factory.network.Sender;

/**
 * @author qiudm
 * @date 2018/9/25 16:34
 * @desc
 */
public abstract class Factory {

    abstract Sender produce();

}
